move previews to images folder

--- a/ui/src/blogs/5/index.mdx
+++ b/ui/src/blogs/5/index.mdx
@@ -15,7 +15,7 @@ import {Helmet} from "react-helmet";
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="The magic of Infrastructure as Code with Terraform"/>
     <meta property="og:url" content="https://arthurdayton.com/post/5/"/>
-    <meta property="og:image" content="%PUBLIC_URL%/AWS_serverless_web_app.png"/>
+    <meta property="og:image" content="%PUBLIC_URL%/images/5/preview.png"/>
     <meta property="og:description" content="This post shows hows to use maps and for-each loops with Terraform to dynamically create infrastructure on AWS"/>
     <meta property="article:author" content="Arthur Dayton"/>
     <meta property="article:published_date" content="2022-02-16"/>
