--- a/ui/src/blogs/6/index.mdx
+++ b/ui/src/blogs/6/index.mdx
@@ -30,12 +30,12 @@ export const gaTerraform = "https://github.com/hashicorp/setup-terraform"
 
 <Helmet>
 <meta property="og:type" content="article"/>
-<meta property="og:title" content="Serverless Web Application Deployement on AWS"/>
+<meta name="title" property="og:title" content="Serverless Web Application Deployement on AWS"/>
 <meta property="og:url" content="https://arthurdayton.com/post/6/"/>
-<meta property="og:image" content="%PUBLIC_URL%/images/6/preview.png"/>
-<meta property="og:description" content="This post shows the code for deploying a serverless application to AWS using Terraform, React, GraphQL and GitHub Actions."/>
-<meta property="article:author" content="Arthur Dayton"/>
-<meta property="article:published_date" content="2022-02-16"/>
+<meta name="image" property="og:image" content="%PUBLIC_URL%/images/6/preview.png"/>
+<meta name="description" property="og:description" content="This post shows the code for deploying a serverless application to AWS using Terraform, React, GraphQL and GitHub Actions."/>
+<meta name="author" property="article:author" content="Arthur Dayton"/>
+<meta name="published_time" property="article:published_time" content="2022-02-16"/>
 <meta property="article:tag" content="Terraform"/>
 <meta property="article:tag" content="AWS"/>
 <meta property="article:tag" content="React"/>
