add fqdm to image meta

--- a/ui/src/blogs/5/index.mdx
+++ b/ui/src/blogs/5/index.mdx
@@ -13,10 +13,10 @@ import {Helmet} from "react-helmet";
 
 <Helmet>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="The magic of Infrastructure as Code with Terraform"/>
+    <meta name="title" property="og:title" content="The magic of Infrastructure as Code with Terraform"/>
     <meta property="og:url" content="https://arthurdayton.com/post/5/"/>
-    <meta property="og:image" content="%PUBLIC_URL%/images/5/preview.png"/>
-    <meta property="og:description" content="This post shows hows to use maps and for-each loops with Terraform to dynamically create infrastructure on AWS"/>
+    <meta name="image" property="og:image" content="https://arthurdayton.com/images/5/preview.png"/>
+    <meta name="description" property="og:description" content="This post shows hows to use maps and for-each loops with Terraform to dynamically create infrastructure on AWS"/>
     <meta property="article:author" content="Arthur Dayton"/>
     <meta property="article:published_date" content="2022-02-16"/>
     <meta property="article:tag" content="Terraform"/>
