--- a/ui/src/blogs/templatev2/index.mdx
+++ b/ui/src/blogs/templatev2/index.mdx
@@ -18,7 +18,7 @@ export const Repo = "https://github.com/arthurdayton116/aws-terraform/tree/main/
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Serverless Web Application Deployement on AWS"/>
     <meta property="og:url" content="https://arthurdayton.com/post/6/"/>
-    <meta property="og:image" content="%PUBLIC_URL%/AWS_serverless_web_app.png"/>
+    <meta property="og:image" content="https://arthurdayton.com/AWS_serverless_web_app.png"/>
     <meta property="og:description" content="This post shows the code for deploying a serverless application to AWS using Terraform, React, GraphQL and GitHub Actions."/>
     <meta property="article:author" content="Arthur Dayton"/>
     <meta property="article:published_date" content="2022-02-16"/>
