--- a/ui/src/blogs/6/index.mdx
+++ b/ui/src/blogs/6/index.mdx
@@ -32,7 +32,7 @@ export const gaTerraform = "https://github.com/hashicorp/setup-terraform"
 <meta property="og:type" content="article"/>
 <meta name="title" property="og:title" content="Serverless Web Application Deployement on AWS"/>
 <meta property="og:url" content="https://arthurdayton.com/post/6/"/>
-<meta name="image" property="og:image" content="%PUBLIC_URL%/images/6/preview.png"/>
+<meta name="image" property="og:image" content="https://arthurdayton.com/images/6/preview.png"/>
 <meta name="description" property="og:description" content="This post shows the code for deploying a serverless application to AWS using Terraform, React, GraphQL and GitHub Actions."/>
 <meta name="author" property="article:author" content="Arthur Dayton"/>
 <meta name="published_time" property="article:published_time" content="2022-02-16"/>
